--- a/WebNI/SkeletonCanvas.html
+++ b/WebNI/SkeletonCanvas.html
@@ -6,10 +6,18 @@
 	
 	<script type="text/javascript">
 		var wsNIServer;
+		var canvImg;
+		var ctxCanvas;
 		var output;
+		var idTimer;
+
+		function Initialize() {
+			output = document.getElementById("output");
+			canvImg = document.getElementById("disp_area");
+			ctxCanvas = canvImg.getContext("2d");
+		}
 
 		function ConnectServer() {
-			output = document.getElementById("output");
 			var wsServer = document.getElementById("wsServerUri").value;
 
 			wsNIServer = new WebSocket(wsServer);
@@ -22,49 +30,92 @@
 				document.getElementById("butConnect").onclick = DisconnectServer;
 				writeToScreen("CONNECTED");
 
+				// get the size of depth map
 				wsNIServer.onmessage = function (msg) {
 					if (msg.data instanceof ArrayBuffer) {
-						var bytes = new Uint16Array(msg.data);
-						writeToScreen("Depth size: " + bytes[0] + "/" + bytes[1]);
+						var aSize = new Uint16Array(msg.data);
+						writeToScreen("Depth size: " + aSize[0] + "/" + aSize[1]);
+						canvImg.width = aSize[0];
+						canvImg.height = aSize[1];
+						idTimer = setTimeout(UpdateData, 500);
+					}
+					else {
+						writeError(msg.data);
 					}
 				};
 				wsNIServer.send("get depth_size");
 			};
 
 			wsNIServer.onclose = function (evt) {
-				onClose(evt)
+				writeToScreen("DISCONNECTED");
+				DisconnectServer();
 			};
 
-
 			wsNIServer.onerror = function (evt) {
-				onError(evt)
+				writeError(evt.data);
 			};
 		}
 
 		function DisconnectServer() {
+			clearInterval(idTimer);
 			wsNIServer.close();
 			document.getElementById("wsServerUri").disabled = false;
 			document.getElementById("butConnect").value = "connect";
 			document.getElementById("butConnect").onclick = ConnectServer;
 		}
 
-		function onClose(evt) {
-			writeToScreen("DISCONNECTED");
-			DisconnectServer();
+		function UpdateData() {
+			// clear canvas
+			ctxCanvas.clearRect(0, 0, ctxCanvas.width, ctxCanvas.height);
+
+			// Get user list first
+			wsNIServer.onmessage = function (msg) {
+				if (msg.data instanceof ArrayBuffer) {
+					var aList = new Uint16Array(msg.data);
+					if (aList.length > 0 && aList[0] != 0) {
+						// get first user skeleton
+						wsNIServer.onmessage = function (msg) {
+							if (msg.data instanceof ArrayBuffer) {
+								var aSkeleton = new Float32Array(msg.data);
+								writeToScreen(aSkeleton[0] + "/" + aSkeleton[1] + "/" + aSkeleton[2]);
+								DrawLine(ctxCanvas, aSkeleton, 0, 1);
+								DrawLine(ctxCanvas, aSkeleton, 1, 2);
+								DrawLine(ctxCanvas, aSkeleton, 2, 4);
+								DrawLine(ctxCanvas, aSkeleton, 4, 6);
+								DrawLine(ctxCanvas, aSkeleton, 1, 3);
+								DrawLine(ctxCanvas, aSkeleton, 3, 5);
+								DrawLine(ctxCanvas, aSkeleton, 5, 7);
+								DrawLine(ctxCanvas, aSkeleton, 1, 8);
+								DrawLine(ctxCanvas, aSkeleton, 8, 9);
+								DrawLine(ctxCanvas, aSkeleton, 9, 11);
+								DrawLine(ctxCanvas, aSkeleton, 11, 13);
+								DrawLine(ctxCanvas, aSkeleton, 8, 10);
+								DrawLine(ctxCanvas, aSkeleton, 10, 12);
+								DrawLine(ctxCanvas, aSkeleton, 12, 14);
+
+								for (var iJoint = 0; iJoint < aSkeleton.length / 3; ++iJoint) {
+								}
+
+								idTimer = setTimeout(UpdateData, 500);
+
+							}
+						}
+						wsNIServer.send("get user " + aList[0] + " skeleton 2D");
+					}
+					else {
+						idTimer = setTimeout(UpdateData, 500);
+					}
+				}
+				else {
+					writeError(msg.data);
+				}
+			}
+			wsNIServer.send("get user_list");
 		}
 
-		function onMessage(evt) {
-			writeToScreen('<span style="color:blue;">RESPONSE:' + evt.data + '</span>');
-			//wsNIServer.close();
-		}
-
-		function onError(evt) {
-			writeToScreen('<span style="color:red;">ERROR:</span>' + evt.data);
-		}
-
-		function doSend(message) {
-			writeToScreen("SENT: " + message);
-			wsNIServer.send(message);
+		function DrawLine(ctx, aData, s1, s2 ) {
+			ctx.moveTo(aData[s1 * 3], aData[s1 * 3 + 1]);
+			ctx.lineTo(aData[s2 * 3], aData[s2 * 3 + 1]);
 		}
 
 		function writeToScreen(message) {
@@ -73,6 +124,12 @@
 			pre.innerHTML = message;
 			output.appendChild(pre);
 		}
+
+		function writeError(message) {
+			writeToScreen('<span style="color:red;">ERROR:</span>' + message);
+		}
+
+		window.addEventListener("load", Initialize, false);
 	</script>
 </HEAD>
 
@@ -83,6 +140,7 @@
 		<input id="wsServerUri" type="text" value="ws://localhost:9002/" />
 		<input id="butConnect" type="submit" value="connect" onclick="ConnectServer()" />
 	</div>
-	<div id="output"></div>
+	<canvas id="disp_area" style="border:1px solid #000000;"></canvas>
+	<div id="output" style="border:1px solid #000000;"></div>
 </BODY>
 </HTML>
