Modify WebNI to webNI

--- a/TestWeb/SkeletonCanvas.html
+++ b/TestWeb/SkeletonCanvas.html
@@ -2,12 +2,12 @@
 <HTML>
 <HEAD>
 	<META charset="utf-8" />
-	<TITLE>WebNI Demo - Skeleton Canvas</TITLE>
+	<TITLE>webNI Demo - Skeleton Canvas</TITLE>
 
-	<script src="../WebNI.js/WebNI.js"></script>
+	<script src="../webNI.js/webNI.js"></script>
 
 	<script type="text/javascript">
-		var gWebNI = new WebNI();
+		var gWebNI = new webNI();
 		//"use strict";
 
 		var canvImg;
@@ -107,7 +107,7 @@
 </HEAD>
 
 <BODY>
-	<h2>WebNI Canvas Demo</h2>
+	<h2>webNI Canvas Demo</h2>
 	<div>
 		<span>Server:</span>
 		<input id="wsServerUri" type="text" value="ws://localhost:9002/" />
