--- a/TestWeb/SkeletonCanvas.html
+++ b/TestWeb/SkeletonCanvas.html
@@ -1,3 +1,12 @@
+<!--
+ * This file is webNI demo web page.
+ *				version 0.1+ @2013/04/18
+ *
+ * This server is developed by Heresy
+ * The full project: https://github.com/KHeresy/webNI
+ * My blog: http://kheresy.wordpress.com/
+ -->
+
 <!DOCTYPE html>
 <HTML>
 <HEAD>
