--- a/TestWeb/SkeletonCanvas.html
+++ b/TestWeb/SkeletonCanvas.html
@@ -22,7 +22,9 @@
 		var canvImg;
 		var ctxCanvas;
 		var output;
+		var readMode = 1;
 		var idTimer;
+		var aJoints = new Array();
 
 		function Initialize() {
 			output = document.getElementById("output");
@@ -87,15 +89,32 @@
 				var bHaveUserTracked = false;
 				for( var i in aUserList ){
 					if (aUserList[i].bTracked) {
-						gWebNI.getUserSkeleton2D(aUserList[i].uID, function (pWebNI, mSkeleton) {
-							// clear canvas
-							ctxCanvas.clearRect(0, 0, ctxCanvas.canvas.width, ctxCanvas.canvas.height);
-							if (mSkeleton != null) {
-								DrawSkeleton(mSkeleton);
-							}
-							idTimer = setTimeout(UpdateData, 30);
-						});
+						if (readMode == 1) {
+							gWebNI.getUserSkeleton2D(aUserList[i].uID, function (pWebNI, mSkeleton) {
+								// clear canvas
+								ctxCanvas.clearRect(0, 0, ctxCanvas.canvas.width, ctxCanvas.canvas.height);
+								if (mSkeleton != null) {
+									DrawSkeleton(mSkeleton);
+								}
+								idTimer = setTimeout(UpdateData, 30);
+							});
+						}
+						else if (readMode == 2) {
+							gWebNI.getJoint2D(aUserList[i].uID, 'head', function (pWebNI, mJoint) {
+								aJoints[0] = mJoint;
+								gWebNI.getJoint2D(aUserList[i].uID, 'neck', function (pWebNI, mJoint) {
+									aJoints[1] = mJoint;
 
+									if (aJoints[0] != null && aJoints[1] != null) {
+										ctxCanvas.clearRect(0, 0, ctxCanvas.canvas.width, ctxCanvas.canvas.height);
+										ctxCanvas.beginPath();
+										DrawLine(aJoints[0], aJoints[1]);
+										ctxCanvas.stroke();
+									}
+									idTimer = setTimeout(UpdateData, 30);
+								});
+							});
+						}
 						bHaveUserTracked = true;
 						break;
 					}
@@ -104,6 +123,11 @@
 					idTimer = setTimeout(UpdateData, 30);
 				}
 			});
+		}
+
+		function ModeChange(mode) {
+			readMode = mode;
+			writeToScreen("Mode changed to: " + mode);
 		}
 
 		function writeToScreen(message) {
@@ -127,6 +151,13 @@
 		<span>Server:</span>
 		<input id="wsServerUri" type="text" value="ws://localhost:9002/" />
 		<input id="butConnect" type="submit" value="connect" onclick="ConnectServer()" />
+	</div>
+	<div>
+		<span>Data read method: </span>
+		<select onchange="ModeChange(this.value)">
+			<option value="1">Full Skeleton</option>
+			<option value="2">Joints</option>
+		</select>
 	</div>
 	<canvas id="disp_area" style="border:1px solid #000000;"></canvas>
 	<div id="output" style="border:1px solid #000000;"></div>
